--- a/static/style.css
+++ b/static/style.css
@@ -247,7 +247,7 @@ body.dark-mode .notification {
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 1.5em;  /* Aumenta o tamanho do ícone */
+    font-size: 1.5em;
     color: #999;
     margin-left: 10px;
 }
@@ -274,7 +274,7 @@ body.dark-mode .notification {
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 1.5em;  /* Aumenta o tamanho do ícone */
+    font-size: 1.5em;
     color: #999;
     margin-left: 10px;
 }
