--- a/static/style.css
+++ b/static/style.css
@@ -52,6 +52,13 @@ body.dark-mode {
     border-bottom-left-radius: 10px;
 }
 
+.logo {
+    display: block;
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
 body.dark-mode .sidebar {
     background-color: var(--dark-sidebar-bg-color);
 }
